--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,30 +6,35 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^12.1.4",
+    "@semantic-ui-react/css-patch": "^1.0.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.44",
-    "@types/react-calendar": "^3.5.0",
-    "@types/react-dom": "^17.0.15",
-    "@types/react-router-dom": "^5.3.2",
-    "axios": "^0.26.1",
-    "mobx": "^6.5.0",
-    "mobx-react-lite": "^3.3.0",
-    "react": "^18.0.0",
-    "react-calendar": "^3.7.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.3.1",
+    "@types/history": "^4.7.11",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^16.11.19",
+    "@types/react": "^17.0.38",
+    "@types/react-calendar": "^3.4.5",
+    "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
+    "formik": "^2.2.9",
+    "history": "^4.10.1",
+    "mobx": "^6.3.12",
+    "mobx-react-lite": "^3.2.3",
+    "react": "^17.0.2",
+    "react-calendar": "^3.6.0",
+    "react-datepicker": "^4.6.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1",
-    "react-toastify": "^8.2.0",
+    "react-scripts": "5.0.0",
+    "react-toastify": "^8.1.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.2",
-    "typescript": "^4.6.3",
+    "typescript": "^4.5.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -56,6 +61,10 @@
     ]
   },
   "devDependencies": {
-    "@types/uuid": "^8.3.4"
+    "@types/react-datepicker": "^4.3.4",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/uuid": "^8.3.4",
+    "@types/yup": "^0.29.13",
+    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git"
   }
 }
