--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,10 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "@semantic-ui-react/css-patch": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -17,24 +13,20 @@
     "@types/react-calendar": "^3.4.5",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
-    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "history": "^4.10.1",
     "mobx": "^6.3.12",
     "mobx-react-lite": "^3.2.3",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
-    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.1.2",
+    "semantic-ui-react": "^2.0.4",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.3",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,8 +36,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -61,10 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-datepicker": "^4.3.4",
     "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.4",
-    "@types/yup": "^0.29.13",
-    "semantic-ui-css": "git+https://github.com/Semantic-Org/Semantic-UI-CSS.git"
+    "@types/uuid": "^8.3.4"
   }
 }
