--- a/client-app/package.json
+++ b/client-app/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.4.5",
     "@types/react-dom": "^17.0.11",
+    "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "history": "^4.10.1",
@@ -26,7 +27,8 @@
     "semantic-ui-react": "^2.0.4",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "^2.1.3",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
