--- a/.gitignore
+++ b/.gitignore
@@ -454,3 +454,14 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+API/reactivities.db-shm
+API/reactivities.db-wal
+API/obj/staticwebassets.pack.sentinel
+API/obj/Debug/net6.0/API.assets.cache
+API/obj/Debug/net6.0/API.GeneratedMSBuildEditorConfig.editorconfig
+Application/obj/Debug/net6.0/Application.assets.cache
+Application/obj/Debug/net6.0/Application.GeneratedMSBuildEditorConfig.editorconfig
+Domain/obj/Debug/net6.0/Domain.assets.cache
+Domain/obj/Debug/net6.0/Domain.GeneratedMSBuildEditorConfig.editorconfig
+Persistence/obj/Debug/net6.0/Persistence.assets.cache
+Persistence/obj/Debug/net6.0/Persistence.GeneratedMSBuildEditorConfig.editorconfig
