--- a/client-app/package.json
+++ b/client-app/package.json
@@ -20,6 +20,7 @@
     "mobx-react-lite": "^3.2.3",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
@@ -54,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.4.0",
     "@types/react-router-dom": "^5.1.6",
     "@types/uuid": "^8.3.4"
   }
