Configured ActivityM to MAttendee relationship

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ nunit-*.xml
 
 # Build Results of an ATL Project
 [Dd]ebugPS/
+[Dd]ebug/
+[Bb]in/
 [Rr]eleasePS/
 dlldata.c
 
@@ -485,3 +487,6 @@ Domain/obj/Debug/net6.0/Domain.assets.cache
 Domain/obj/Debug/net6.0/Domain.GeneratedMSBuildEditorConfig.editorconfig
 Persistence/obj/Debug/net6.0/Persistence.assets.cache
 Persistence/obj/Debug/net6.0/Persistence.GeneratedMSBuildEditorConfig.editorconfig
+
+obj
+Debug
