--- a/.gitignore
+++ b/.gitignore
@@ -494,3 +494,12 @@ obj
 Debug
 Debug/
 API/obj/API.csproj.nuget.dgspec.json
+Persistence/obj/Debug/net6.0/Persistence.GeneratedMSBuildEditorConfig.editorconfig
+Domain/obj/Debug/net6.0/Domain.GeneratedMSBuildEditorConfig.editorconfig
+Persistence/obj/Debug/net6.0/Persistence.assets.cache
+Domain/obj/Debug/net6.0/Domain.assets.cache
+Application/obj/Debug/net6.0/Application.GeneratedMSBuildEditorConfig.editorconfig
+Application/obj/Debug/net6.0/Application.assets.cache
+API/obj/Debug/net6.0/API.GeneratedMSBuildEditorConfig.editorconfig
+API/obj/Debug/net6.0/API.assets.cache
+API/reactivities.db
