--- a/.gitignore
+++ b/.gitignore
@@ -503,3 +503,4 @@ Application/obj/Debug/net6.0/Application.assets.cache
 API/obj/Debug/net6.0/API.GeneratedMSBuildEditorConfig.editorconfig
 API/obj/Debug/net6.0/API.assets.cache
 API/reactivities.db
+API/appsettings.json
