--- a/.gitignore
+++ b/.gitignore
@@ -504,3 +504,4 @@ API/obj/Debug/net6.0/API.GeneratedMSBuildEditorConfig.editorconfig
 API/obj/Debug/net6.0/API.assets.cache
 API/reactivities.db
 API/appsettings.json
+API/obj/staticwebassets.pack.sentinel
