--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -23,8 +24,9 @@
     "react-calendar": "^3.6.0",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
     "semantic-ui-react": "^2.0.4",
     "typescript": "^4.5.4",
