--- a/client-app/package.json
+++ b/client-app/package.json
@@ -22,6 +22,7 @@
     "mobx-react-lite": "^3.2.3",
     "react": "^17.0.2",
     "react-calendar": "^3.6.0",
+    "react-cropper": "^2.1.8",
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.5",
