--- a/client-app/package.json
+++ b/client-app/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.38",
     "@types/react-calendar": "^3.4.5",
     "@types/react-dom": "^17.0.11",
+    "@types/react-infinite-scroller": "^1.2.3",
     "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "date-fns": "^2.28.0",
@@ -27,6 +28,7 @@
     "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-dropzone": "^12.0.5",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
