--- a/client-app/package.json
+++ b/client-app/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^8.1.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.4",
     "typescript": "^4.5.4",
     "uuid": "^8.3.2",
