--- a/client-app/package.json
+++ b/client-app/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@types/react-datepicker": "^4.4.0",
     "@types/react-router-dom": "^5.1.6",
-    "@types/uuid": "^8.3.4"
+    "@types/uuid": "^8.3.4",
+    "babel-plugin-react-svg": "^3.0.3"
   }
 }
